Добавлено выпадающее меню в хедере

--- a/addProgram.html
+++ b/addProgram.html
@@ -26,7 +26,23 @@
             </nav>
             <div class="lk d-flex">
               <div class="mr-3">Тариф: <span class="font-weight-bold text-primary">ПРОФИ</span> <small class="text-light">до 02.09.2022</small></div>
-              <a class="font-weight-bold" href="#">Мой Профиль</a>
+              <div class="dropdown">
+              <div class="lk__profile">
+                <span class="profile-button font-weight-bold text-primary cursor-pointer">Мой Профиль</span>
+                <div class="lk__dropdown dropdown-menu">
+                  <a class="text-dark" href="#">lorem</a>
+                  <button class="dropdown-item p-0" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Collapse</button>
+                  <div class="collapse" id="collapseExample">
+                    <div class="d-flex flex-column">
+                      <a class="text-dark" href="#">lorem</a>
+                      <a class="text-dark" href="#">lorem</a>
+                      <a class="text-dark" href="#">lorem</a>
+                    </div>
+                  </div>
+                  <a class="text-dark" href="#">lorem</a>
+                  <a class="text-dark" href="#">lorem</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
